--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "nodemon",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node build/server"
   },
   "dependencies": {
+    "@prisma/client": "^2.13.1",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
     "next": "10.0.4",
+    "node-os-utils": "^1.3.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.13.1",
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.19",
+    "@types/node-os-utils": "^1.2.0",
+    "@types/react": "^17.0.0",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
