--- a/package.json
+++ b/package.json
@@ -1,28 +1,58 @@
 {
   "name": "ffxi_monitor",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Monitor services and execute scripts on your [project-topaz Final Fantasy XI server](https://github.com/project-topaz/topaz).",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node build/server"
+    "build": "rimraf ./dist && tsc && shx cp ./src/.env* ./dist",
+    "watch": "tsc -w",
+    "dev": "nodemon dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BrothaSam/ffxi_monitor.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BrothaSam/ffxi_monitor/issues"
+  },
+  "homepage": "https://github.com/BrothaSam/ffxi_monitor#readme",
   "dependencies": {
-    "@prisma/client": "^2.13.1",
+    "@graphql-tools/schema": "^7.1.2",
+    "@mikro-orm/cli": "^4.3.4",
+    "@mikro-orm/core": "^4.3.4",
+    "@mikro-orm/mariadb": "^4.3.4",
+    "@mikro-orm/reflection": "^4.3.4",
+    "apollo-server-fastify": "^3.0.0-alpha.3",
     "cross-env": "^7.0.3",
-    "express": "^4.17.1",
-    "next": "10.0.4",
+    "dotenv": "^8.2.0",
+    "fastify": "^3.9.2",
+    "fastify-plugin": "^3.0.0",
+    "graphql": "^15.4.0",
+    "mercurius": "^6.9.1",
     "node-os-utils": "^1.3.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "os": "^0.1.1",
+    "pino-pretty": "^4.3.0",
+    "type-graphql": "^1.1.1"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   },
   "devDependencies": {
-    "@prisma/cli": "^2.13.1",
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.14.19",
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^14.14.20",
     "@types/node-os-utils": "^1.2.0",
-    "@types/react": "^17.0.0",
-    "nodemon": "^2.0.6",
+    "@types/pino": "^6.3.5",
+    "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
+    "shx": "^0.3.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
